--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ framework = arduino
 lib_deps = 
 	mobizt/Firebase ESP32 Client@^3.8.13
 	plerup/EspSoftwareSerial@^6.11.6
+	; bblanchon/ArduinoJson@^6.18.0
